# codeql-gh

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml  semgrep  semgrep-free.yml  semgrep.yml
src_c/: main.c  vuln1_uaf.c  vuln2_oob.c  vuln3_stack_overflow.c  vuln4_aws_hardcoded_keys.c  vuln5_arbitrary_cmd_exec.c  vuln6_format_str.c  vuln7_double_free.c  vuln8_integer_underflow.c  vulns.h
src_python/: README.md  app.py  database.py  rce_routes.py  requirements.txt  sqli_routes.py  xss_routes.py
